--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -6,7 +6,13 @@
 
 {% block javascript %}
     {{ parent() }}
-
+    <script>
+        {% if currentCategoryId is defined %}
+            window.currentCategoryId = '{{ currentCategoryId|e('js') }}';
+        {% else %}
+            window.currentCategoryId = null;
+        {% endif %}
+    </script>
     {{ encore_entry_script_tags('products') }}
 {% endblock %}
 
