--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -58,7 +58,7 @@
         </p>
 
         {% block javascripts %}
-            {{ encore_entry_script_tags('products') }}
+            {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </body>
 </html>
