--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -4,20 +4,21 @@
     <div id="app"></div>
 {% endblock %}
 
-{% block javascript %}
-    {{ parent() }}
-    <script>
-        {% if currentCategoryId is defined %}
-            window.currentCategoryId = '{{ currentCategoryId|e('js') }}';
-        {% else %}
-            window.currentCategoryId = null;
-        {% endif %}
-    </script>
-    {{ encore_entry_script_tags('products') }}
-{% endblock %}
-
 {% block stylesheets %}
     {{ parent() }}
 
     {{ encore_entry_link_tags('products') }}
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+
+    <script>
+        {% if currentCategoryId is defined %}
+        window.currentCategoryId = '{{ currentCategoryId|e('js') }}';
+        {% else %}
+        window.currentCategoryId = null;
+        {% endif %}
+    </script>
+    {{ encore_entry_script_tags('products') }}
 {% endblock %}
